<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ChooseTypeActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/purple_200"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/ivBg"
                    android:layout_width="150dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/logo"
                    android:scaleType="fitXY"
                    android:layout_height="150dp"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="-60dp"
                android:layout_height="match_parent">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">



                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <com.google.android.material.card.MaterialCardView
                                    android:layout_width="match_parent"
                                    android:layout_height="180dp"
                                    android:layout_marginLeft="15dp"
                                    android:layout_marginTop="30dp"
                                    android:layout_marginBottom="5dp"
                                    android:layout_marginRight="15dp"
                                     app:cardElevation="5dp"
                                    app:cardCornerRadius="15dp">

                                    <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content">

                                        <ImageView
                                            android:id="@+id/imgUser"
                                            android:layout_width="180dp"
                                            android:layout_height="180dp"
                                            android:layout_marginLeft="15dp"
                                            android:src="@drawable/user"
                                           />


                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_alignParentRight="true"
                                            android:gravity="center"
                                            android:layout_centerVertical="true"
                                            android:layout_toRightOf="@+id/imgUser"
                                            android:layout_centerHorizontal="true"
                                            android:text="@string/user"
                                            android:textColor="@color/black"
                                            android:textSize="16sp" />


                                    </RelativeLayout>

                                </com.google.android.material.card.MaterialCardView>

                                <com.google.android.material.card.MaterialCardView
                                    android:layout_width="match_parent"
                                    android:layout_height="180dp"
                                    android:layout_marginLeft="15dp"
                                    android:layout_marginTop="30dp"
                                    android:layout_marginBottom="5dp"
                                    android:layout_marginRight="15dp"
                                    app:cardElevation="5dp"
                                    android:id="@+id/cardDriver"
                                    app:cardCornerRadius="15dp">

                                    <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content">

                                        <ImageView
                                            android:id="@+id/imgDriver"
                                            android:layout_width="180dp"
                                            android:layout_height="180dp"
                                            android:layout_marginLeft="15dp"
                                            android:src="@drawable/driver"
                                            />


                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_alignParentRight="true"
                                            android:gravity="center"
                                            android:layout_centerVertical="true"
                                            android:layout_toRightOf="@+id/imgDriver"
                                            android:layout_centerHorizontal="true"
                                            android:text="@string/driver"
                                            android:textColor="@color/black"
                                            android:textSize="16sp" />


                                    </RelativeLayout>

                                </com.google.android.material.card.MaterialCardView>




                            </LinearLayout>

                        </ScrollView>






                    </RelativeLayout>


                </com.google.android.material.card.MaterialCardView>


                </RelativeLayout>



        </LinearLayout>



    </ScrollView>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/next"
        app:cornerRadius="15dp">


    </com.google.android.material.button.MaterialButton>

</RelativeLayout>



</RelativeLayout>